Fix math scrollbars for realz

--- a/src/pydata_sphinx_theme/assets/styles/content/_math.scss
+++ b/src/pydata_sphinx_theme/assets/styles/content/_math.scss
@@ -36,8 +36,13 @@ div.math {
   mjx-container {
     flex-grow: 1;
     padding-bottom: 0.2rem;
-    overflow-y: visible;
-    overflow-x: auto;
+    overflow: auto;
     @include scrollbar-style();
+    
+    // Set height to 0 so that it does not cause scrollbars to appear
+    // ref: https://github.com/mathjax/MathJax/issues/2521
+    .mjx-assistive-mml {
+      height: 0;
+    }
   }
 }
